# coro-wayland

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
docs/: wayland_window_management.md
src/: CMakeLists.txt
src/code_generator/: CMakeLists.txt  JinjaTemplateEngine.cpp  JinjaTemplateEngine.hpp  WaylandXmlParser.cpp  WaylandXmlParser.hpp  code_generator.cpp
src/code_generator/tests/: CMakeLists.txt  test_jinja_template_engine.cpp
src/core/: AsyncScope.cpp  CMakeLists.txt  FileDescriptor.cpp  IoContext.cpp  IoTask.cpp  StaticThreadPool.cpp  Strand.cpp  Task.cpp  write_env.cpp
src/core/include/: AsyncChannel.hpp  AsyncQueue.hpp  AsyncScope.hpp  AsyncUnorderedMap.hpp  Concepts.hpp  FileDescriptor.hpp  ImmovableBase.hpp  IoContext.hpp  IoTask.hpp  ManualLifetime.hpp  Observable.hpp  Polymoprhic.hpp  Queries.hpp  StaticThreadPool.hpp  Strand.hpp  Task.hpp  bwos_lifo_queue.hpp  concepts.hpp  coro_guard.hpp  coro_just.hpp  just_stopped.hpp  narrow.hpp  queries.hpp  read_env.hpp  stopped_as_optional.hpp  sync_wait.hpp  when_all.hpp  when_any.hpp  when_stop_requested.hpp  write_env.hpp
src/core/include/observables/: empty.hpp  first.hpp  single.hpp  then.hpp  use_resource.hpp  zip.hpp
src/core/tests/: CMakeLists.txt  test_async_channel.cpp  test_async_queue.cpp  test_async_scope.cpp  test_bwos_lifo_queue.cpp  test_coro_guard.cpp  test_io_context.cpp  test_observable.cpp  test_static_thread_pool.cpp  test_sync_wait.cpp  test_task.cpp  test_use_resource.cpp  test_when_all.cpp  test_when_any.cpp
src/logging/: CMakeLists.txt  Logging.cpp
src/logging/include/: Logging.hpp
src/renderer/: CMakeLists.txt  Font.cpp  FontManager.cpp  GlyphCache.cpp  PixelsView.cpp  Rasterizer.cpp  RenderContext.cpp  TextRenderer.cpp
src/renderer/demo/: graphics_demo.cpp
src/renderer/include/: Font.hpp  FontManager.hpp  GeometricPrimitives.hpp  GlyphCache.hpp  Graphics.hpp  PixelsView.hpp  Rasterizer.hpp  RenderContext.hpp  TextRenderer.hpp
src/renderer/tests/: CMakeLists.txt  test_pixels_view.cpp
src/wayland/: CMakeLists.txt  Client.cpp  Connection.cpp  FrameBufferPool.cpp  Window.cpp  WindowSurface.cpp  protocol.cpp.in  protocol.hpp.in  wayland_app.cpp  wayland_app2.cpp
src/wayland/include/wayland/: Client.hpp  Connection.hpp  FrameBufferPool.hpp  Window.hpp  WindowBase.hpp  WindowSurface.hpp  connection.hpp  protocol.hpp
src/widgets/: CMakeLists.txt  Text.cpp
src/widgets/include/: BoxConstraints.hpp  Column.hpp  Container.hpp  Flexible.hpp  Text.hpp  Widget.hpp
